Sat Jul  3 09:47:26 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb(visit_Psych_Nodes_Scalar):
	  teaching Psych to deserialize DateTime objects. [Bug #1390]

	* ext/psych/lib/psych/visitors/yaml_tree.rb(visit_DateTime): added a
	  method for serializing DateTime objects.

	* ext/psych/lib/psych/scalar_scanner.rb(parse_time): add method for
	  parsing times objects from a string.
	
	* test/psych/test_date_time.rb: tests for dumping DateTime objects.

Sat Jul  3 09:13:55 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb (visit_Time): use
	  Time#nsec to accurately serialize time objects. [ruby-core:29233]

Tue Jul  6 00:34:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm.c (thread_free): free altstack to prevent memory leak.  a patch
	  from Tomoyuki Chikanaga in [ruby-dev:41815]. [Bug #3537]

Tue Jul  6 00:29:27 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (NONASCII_MASK): NONASCII_MASK must be unsigned.
	  [ruby-dev:41782]

Fri Jul  2 19:07:09 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* io.c (argf_inplace_mode_set): prohibits an assignment
	  of a tainted value. Patch by unak.

	* util.c, file.c: prevents a buffer over-run on windows.
	  Patch by unak.

Tue Jun 29 19:39:59 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_method.rb (is_ruby64): check
	  ruby binary is mswin64 or mingw64. [ruby-dev:41756]

Mon Jun 28 20:32:33 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_method.rb (test_offset_vtbl): check
	  that Ruby is 32bit or 64bit binary in order to get correct offset
	  value. [ruby-dev:41741]

Mon Jun 28 21:56:14 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (rb_fd_resize, rb_fd_copy): avoid NULL dereference upon
	  failed realloc by using xrealloc instead of not realloc.  a patch
	  from Jim Meyering <meyering at redhat.com> in [ruby-core:30920]
	  [Bug #3489]
