@@ -13,5 +13,11 @@ module Psych
       dt = DateTime.now
       assert_cycle dt
     end
+
+    def test_round_trip_with_offset
+      dt = DateTime.now
+      dt = dt.new_offset(Rational(3671, 60 * 60 * 24))
+      assert_cycle dt
+    end
   end
 end
